# website

./: .gitignore  .gitmodules  404.html  CNAME  Cargo.toml  README.md  astro.config.ts  atom.xml  config.toml  deploy.sh  eslint.config.js  hugo.toml  hugo.yaml  index.html  package.json  pnpm-lock.yaml  reset.css  robots.txt  search_index.en.js  settings.json  sitemap.xml  style.css  uno.config.ts
.github/workflows/: deploy.yaml  deploy.yml  hugo.yaml
archetypes/: posts.md
astro/: content.d.ts
content/: _index.md  projects.md
content/pages/: index.md  projects.md
content/posts/: 2024-01-01-test.md  2024-01-26-second.md  2024-02-01-third.md  2024-02-27-my-first-post.md  2024-02-27-self-hosting-hetzner-v,-terraform-ansible-docker.md  2024-02-27-self-hosting-hetzner-vm-terraform-ansible-docker.md  2024-02-27-title.md  2024-03-31-ingress-nginx-eks-internal-loadbalancer.md  2024-04-28-application-specific-configuration-gitops.md  2024-05-11-mongodb-crud-api-go-generics.md  2024-05-24-patching-helm-with-kustomize.md  2024-07-07-ebpf-development-on-apple-silicon-macs-using-lima.md  2024-09-03-deploying-aws-eks-cluster-with-terraform.md  2025-07-26-fully-local-meeting-ai-summaries.md  (+9 more)
layouts/: robots.txt
posts/: index.html
projects/: index.html
src/: build.rs  cli.rs  feed.rs  highlight.rs  main.rs  minify.rs  models.rs  parser.rs  renderer.rs  serve.rs  site-config.ts  types.ts
static/: reset.css  style.css
tags/: index.html
templates/: _custom_css.html  _custom_font.html  _head_extend.html  base.html  index.html  page.html  post.html  posts.html  tag.html
(+73 files in other folders)
