[package]
name = "website"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
fs_extra = "1.3.0"
pulldown-cmark = "0.13.4"
serde = { version = "1.0.228", features = ["derive"] }
tera = "1.20.1"
toml = "1.1.2"
walkdir = "2.5.0"
