[package]
name = "website"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
fs_extra = "1.3.0"
mermaid-rs-renderer = { version = "0.2.2", default-features = false }
pulldown-cmark = "0.13.4"
serde = { version = "1.0.228", features = ["derive"] }
syntect = "5.3.0"
tera = "1.20.1"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tower-http = { version = "0.6.11", features = ["fs"] }
walkdir = "2.5.0"
